[package]
name = "node-cli"
version = "0.23.4"
authors = ["Airalab <research@aira.life>"]
description = "IPCI node implementation in Rust & Substrate."
build = "build.rs"
edition = "2018"
license = "Apache-2.0"
default-run = "ipci"
homepage = "https://robonomics.network"
repository = "https://github.com/DAO-IPCI/IPCI-blockchain"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "ipci"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.123", features = ["derive"] }
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
tracing = "0.1.19"
parking_lot = "0.11.0"

# primitives
sp-authority-discovery = { version = "3.0.0" }
sp-consensus-babe = { version = "0.9.0" }
grandpa-primitives = { version = "3.0.0", package = "sp-finality-grandpa" }
sp-core = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-timestamp = { version = "3.0.0", default-features = false }
#sp-finality-tracker = { version = "3.0.0", default-features = false }
sp-inherents = { version = "3.0.0" }
sp-keyring = { version = "3.0.0" }
sp-io = { version = "3.0.0" }
sp-consensus = { version = "0.9.0" }
sp-transaction-pool = { version = "3.0.0" }

# client dependencies
sc-client-api = { version = "3.0.0" }
sc-chain-spec = { version = "3.0.0" }
sc-consensus = { version = "0.9.0" }
sc-transaction-pool = { version = "3.0.0" }
sc-network = { version = "0.9.0" }
sc-consensus-babe = { version = "0.9.0" }
grandpa = { version = "0.9.0", package = "sc-finality-grandpa" }
sc-client-db = { version = "0.9.0", default-features = false }
sc-offchain = { version = "3.0.0" }
sc-rpc = { version = "3.0.0" }
sc-basic-authorship = { version = "0.9.0" }
sc-service = { version = "0.9.0", default-features = false }
sc-tracing = { version = "3.0.0" }
sc-telemetry = { version = "3.0.0" }
sc-authority-discovery = { version = "0.9.0" }

# frame dependencies
pallet-indices = { version = "3.0.0" }
pallet-timestamp = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }
pallet-transaction-payment = { version = "3.0.0" }
frame-support = { version = "3.0.0", default-features = false }
pallet-im-online = { version = "3.0.0", default-features = false }
pallet-authority-discovery = { version = "3.0.0" }
pallet-staking = { version = "3.0.0" }
pallet-grandpa = { version = "3.0.0" }

# node-specific dependencies
node-runtime = { version = "0.23.4", path = "../runtime" }
node-rpc = { version = "0.23.4", path = "../rpc" }
node-primitives = { version = "0.23.4", path = "../primitives" }
node-executor = { version = "0.23.4", path = "../executor" }

# CLI-specific dependencies
sc-cli = { version = "0.9.0", optional = true }
frame-benchmarking-cli = { version = "3.0.0", optional = true }
node-inspect = { version = "0.8.0", optional = true, path = "../inspect" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.71", optional = true }
wasm-bindgen-futures = { version = "0.4.21", optional = true }
browser-utils = { package = "substrate-browser-utils", optional = true, version = "0.9.0"}

# Allocator
jemallocator = { version = "0.3.0",  optional = true }

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { version = "0.23.4", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { version = "0.9.0", optional = true, features = [ "wasmtime" ] }
sc-service = { version = "0.9.0", default-features = false, features = [ "wasmtime" ] }
sp-trie = { version = "3.0.0", default-features = false, features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { version = "3.0.0" }
sc-consensus = { version = "0.9.0" }
sc-consensus-babe = { version = "0.9.0", features = ["test-helpers"] }
sc-consensus-epochs = { version = "0.9.0" }
futures = "0.3.9"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.17"
serde_json = "1.0.64"
regex = "1.4.3"
platforms = "0.2.1"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { version = "0.8.0", optional = true, path = "../inspect" }
frame-benchmarking-cli = { version = "3.0.0", optional = true }
substrate-build-script-utils = { version = "3.0.0", optional = true }
substrate-frame-cli = { version = "3.0.0", optional = true }
sc-cli = { version = "0.9.0", optional = true }

[features]
default = [ "cli" ]
browser = [
	"browser-utils",
	"wasm-bindgen",
	"wasm-bindgen-futures",
]
jem = [
	"jemallocator",
]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
