[package]
name = "node-executor"
version = "0.23.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Curio implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
node-primitives = { version = "0.23.1", path = "../primitives" }
node-runtime = { version = "0.23.1", path = "../runtime" }
sc-executor = { version = "0.8.1" }
sp-core = { version = "2.0.1" }
sp-io = { version = "2.0.1" }
sp-state-machine = { version = "0.8.1" }
sp-trie = { version = "2.0.1" }
trie-root = "0.16.0"
frame-benchmarking = { version = "2.0.1" }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { version = "2.0.1" }
frame-system = { version = "2.0.1" }
pallet-balances = { version = "2.0.1" }
pallet-grandpa = { version = "2.0.1" }
pallet-im-online = { version = "2.0.1" }
pallet-indices = { version = "2.0.1" }
pallet-session = { version = "2.0.1" }
pallet-timestamp = { version = "2.0.1" }
pallet-transaction-payment = { version = "2.0.1" }
sp-application-crypto = { version = "2.0.1" }
sp-runtime = { version = "2.0.1" }
sp-externalities = { version = "0.8.1" }
wat = "1.0"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

