[package]
name = "node-inspect"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
derive_more = "0.99.2"
log = "0.4.8"
sc-cli = { version = "0.8.1" }
sc-client-api = { version = "2.0.1" }
sc-service = { version = "0.8.1", default-features = false }
sp-blockchain = { version = "2.0.1" }
sp-core = { version = "2.0.1" }
sp-runtime = { version = "2.0.1" }
structopt = "0.3.8"
