[package]
name = "node-runtime"
version = "0.23.4"
authors = ["Dmitry Dulesov <dmitry.dulesov@gmail.com>", "Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/CurioTeam/curio-parachain-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.5" }
serde = { version = "1.0.123", optional = true }
static_assertions = "1.1.0"
hex-literal = { version = "0.3.1", optional = true }
smallvec = { version = "1.6.1" }

#local dependencies
pallet-robonomics-datalog = { version = "0.3.0", path = "../../pallets/datalog", default-features = false }
# primitives
sp-authority-discovery = { version = "3.0.0", default-features = false }
sp-consensus-babe = { version = "0.9.0", default-features = false }
sp-block-builder = { default-features = false, version = "3.0.0"}
sp-inherents = { version = "3.0.0", default-features = false }
node-primitives = { version = "0.23.4", default-features = false, path="../primitives" }
sp-offchain = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-api = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false}
sp-staking = { version = "3.0.0", default-features = false }
sp-keyring = { version = "3.0.0", optional = true }
sp-session = { version = "3.0.0", default-features = false }
sp-transaction-pool = { version = "3.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }

# frame dependencies
frame-executive = { version = "3.0.0", default-features = false }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
frame-system-benchmarking = { version = "3.0.0", default-features = false, optional = true }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }
pallet-authority-discovery = { version = "3.0.0", default-features = false }
pallet-authorship = { version = "3.0.0", default-features = false }
pallet-babe = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
pallet-grandpa = { version = "3.0.0", default-features = false }
pallet-im-online = { version = "3.0.0", default-features = false }
pallet-indices = { version = "3.0.0", default-features = false }
pallet-identity = { version = "3.0.0", default-features = false }
pallet-membership = { version = "3.0.0", default-features = false }
pallet-multisig = { version = "3.0.0", default-features = false }
pallet-offences = { version = "3.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
pallet-session = { version = "3.0.0", features = ["historical"], default-features = false }
pallet-session-benchmarking = { version = "3.0.0", default-features = false, optional = true }
pallet-staking = { version = "3.0.0", default-features = false }
pallet-staking-reward-curve = { version = "3.0.0", default-features = false }
pallet-sudo = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-utility = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
pallet-mmr = { version = "3.0.0", default-features = false }

# external dependencies
pallet-evercity = { git = "https://github.com/EvercityEcosystem/evercity-substrate", branch = "master", default-features = false }
pallet-evercity-transfer = { git = "https://github.com/EvercityEcosystem/evercity-substrate", branch = "substrate_3", default-features = false }
[build-dependencies]
substrate-wasm-builder = { version = "3.0.0" }

[dev-dependencies]
sp-io = { version = "3.0.0" }

[features]
default = ["std"]
with-tracing = [ "frame-executive/with-tracing" ]
std = [
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-multisig/std",
	"pallet-identity/std",
	"node-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"pallet-robonomics-datalog/std",
	"pallet-mmr/std",
	"pallet-evercity/std",
	"pallet-evercity-transfer/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-mmr/runtime-benchmarks",
	"pallet-robonomics-datalog/runtime-benchmarks",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
]
