[package]
name = "pallet-robonomics-datalog"
description = "Robonomics Network data logging Substrate runtime module"
version = "0.2.0"
authors = ["Airalab <research@aira.life>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
frame-system = { version="2.0.1", default-features = false }
frame-support = { version="2.0.1", default-features = false }
pallet-timestamp = { version="2.0.1", default-features = false }

[dev-dependencies]
base58 = "0.1.0"
sp-core = { version="2.0.1" }
node-primitives = { path = "../../bin/node/primitives" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-system/std",
    "frame-support/std",
    "pallet-timestamp/std",
]
