[package]
name = "pallet-robonomics-datalog"
description = "Robonomics Network data logging Substrate runtime module"
version = "0.3.1"
authors = ["Airalab <research@aira.life>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-system = { version="3.0.0", default-features = false }
frame-support = { version="3.0.0", default-features = false }
pallet-timestamp = { version="3.0.0", default-features = false }

[dev-dependencies]
base58 = "0.1.0"
sp-core = { version="3.0.0" }
node-primitives = { path = "../../node/primitives" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-system/std",
    "frame-support/std",
    "pallet-timestamp/std",
]
